--- a/about.html
+++ b/about.html
@@ -218,8 +218,7 @@
               <div class="feature-text">
                 <h3 class="heading">Quality properties</h3>
                 <p class="text-black-50">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Nostrum iste.
+                  Offering the highest quality properties
                 </p>
               </div>
             </div>
