--- a/index.html
+++ b/index.html
@@ -383,10 +383,9 @@
             <span class="flaticon-house"></span>
             <h3 class="mb-3">Our Properties</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Voluptates, accusamus.
+              Have a look at our wide variety of listed properties all over Dublin.
             </p>
-            <p><a href="#" class="learn-more">Learn More</a></p>
+            <p><a href="properties.html" class="learn-more">Learn More</a></p>
           </div>
         </div>
         <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="500">
@@ -394,10 +393,9 @@
             <span class="flaticon-building"></span>
             <h3 class="mb-3">Property for Sale</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Voluptates, accusamus.
+              Navigate through our listings and find the home that suits your needs.
             </p>
-            <p><a href="#" class="learn-more">Learn More</a></p>
+            <p><a href="propertiesP2.html" class="learn-more">Learn More</a></p>
           </div>
         </div>
         <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
@@ -405,21 +403,20 @@
             <span class="flaticon-house-3"></span>
             <h3 class="mb-3">Real Estate Agent</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Voluptates, accusamus.
+              Any questions ? want to book a meeting ? Please feel free to contact us.
             </p>
-            <p><a href="#" class="learn-more">Learn More</a></p>
+            <p><a href="contact.html" class="learn-more">Learn More</a></p>
           </div>
         </div>
         <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="600">
           <div class="box-feature">
             <span class="flaticon-house-1"></span>
-            <h3 class="mb-3">House for Sale</h3>
+            <h3 class="mb-3">List Property</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Voluptates, accusamus.
+              If you are looking to sell or rent out your property, please leave your details and one of our qualified
+              agents will get back to you.
             </p>
-            <p><a href="#" class="learn-more">Learn More</a></p>
+            <p><a href="contact.html" class="learn-more">Learn More</a></p>
           </div>
         </div>
       </div>
