--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
           <div class="row justify-content-center text-center mb-5">
             <div class="col-lg-5">
               <h2 class="font-weight-bold heading text-primary mb-4">
-                Let's find home that's perfect for you
+                Let's find the home that's perfect for you
               </h2>
               <p class="text-black-50">
                 ...
