--- a/properties.html
+++ b/properties.html
@@ -772,6 +772,10 @@
   <script src="js/navbar.js"></script>
   <script src="js/counter.js"></script>
   <script src="js/custom.js"></script>
+
+  <!-- ElevenLabs Convai widget -->
+  <elevenlabs-convai agent-id="AEsHokGKWNV5iMBL3869"></elevenlabs-convai>
+  <script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
 </body>
 
 </html>
